--- a/Index.html
+++ b/Index.html
@@ -395,7 +395,7 @@
   </head>
   <body>
     <div class="hr-form">
-      <h1>HR Форма для Фабрика НСК</h1>
+      <h1>HR Форма для <?= COMPANY_NAME ?></h1>
       <div class="button-row">
         <button class="btn" onclick="window.openAddCandidate()">Добавить соискателя</button>
         <button class="btn" onclick="window.openInterviews()">Собеседования</button>
