--- a/Index.html
+++ b/Index.html
@@ -776,9 +776,9 @@
           <div class="form-group full-width">
             <label>Дополнительно</label>
             <div class="checkbox-group">
-              <label><input type="checkbox" id="hasMedicalBook"> Мед. книжка есть</label>
-              <label><input type="checkbox" id="scheduleExplained"> Рассказано про график</label>
-              <label><input type="checkbox" id="paymentExplained"> Рассказано про оплату</label>
+              <label><input type="checkbox" id="internshipHasMedicalBook"> Мед. книжка есть</label>
+              <label><input type="checkbox" id="internshipScheduleExplained"> Рассказано про график</label>
+              <label><input type="checkbox" id="internshipPaymentExplained"> Рассказано про оплату</label>
             </div>
           </div>
         </div>
